--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,16 @@
 title: Simon Eleman # your name (or website title) here
 logo: "/images/bias variance trade-off.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Data scientist|Machine Learning Specialist|Researcher|
+  IT specialist|GIS/Remote sensing Expert|Hydrologist|Geologist|Mentor  
   <br><br>
-  I love data analytics/data science and getting insights from data
-  Second description 
+  A versatile and innovative data scientist with over two years of experience in data analysis, research, 
+  geology and project management. 
+  Completed a master’s degree in data science at Middlesex University and awaiting graduation, 
+  I’m passionate about identifying organisational needs, 
+  defining feasible solutions, and improving efficiency through data-driven insights. 
+  Committed to using my understanding of data to contribute to decision-making processes.
+  Websites 
   <br><br>
   <a href="https://www.linkedin.com/in/simon-eleman/">View My LinkedIn Profile</a> 
   
