--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Simon Eleman # your name (or website title) here
-logo: "/images/bias variance trade-off.png?raw=true" # your photo (or logo) here
+logo: "/images/IMG-20240303-WA0009.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data scientist|Machine Learning Specialist|Researcher|
   IT specialist|GIS/Remote sensing Expert|Hydrologist|Geologist|Mentor  
